<resources>
    <string name="app_name">IOIO-Droid</string>
    <string name="cancel">Cancel</string>
    <string name="done">I already filled out the questionnaire.</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="save">Save</string>
    <string name="yes">Yes</string>
    <string name="seconds">Seconds</string>
    <string name="minutes">Minutes</string>
    <string name="hours">Hours</string>
    <string name="analog">Analog</string>
    <string name="digital">Digital</string>
    <string name="none">0 or 1 (default)</string>
    <string name="absolute">0 &#8211; 3.3V (absolute)</string>
    <string name="relative">0 &#8211; 1 (scaled)</string>
    <string name="floating">Floating (default)</string>
    <string name="pull_down">Pull-down</string>
    <string name="pull_up">Pull-up</string>
    <string name="lower">Lower</string>
    <string name="upper">Upper</string>
    <string name="ioio_v1_entry">V1</string>
    <string name="ioio_v1_entry_value">v1</string>
    <string name="ioio_otg_entry">OTG</string>
    <string name="ioio_otg_entry_value">otg</string>
    <string name="activity_about_label">About</string>
    <string name="app_logo_content_description">App logo</string>
    <string name="by">By kaolick</string>
    <string name="libraries_intro">IOIO-Droid is using the following libraries:</string>
    <string name="libraries">- Google Play Services Library\n- Google Support Library v4\n- IOIOLibAccessory v3.30\n- IOIOLibAndroid v3.30\n- IOIOLibBT v3.30\n- OpenCSV v.2.3</string>
    <string name="license">The Android Robot logo is licensed under the terms of the Creative Commons Attribution license.</string>
    <string name="logo">App logo by Lukas Ruch</string>
    <string name="more_information">More information about the IOIO open-source project:\n\nhttps://github.com/ytai/ioio/wiki\n\nDiscuss with other users:\n\nhttps://groups.google.com/forum/#!forum/ioio_users\n\nMore information about Xively:\n\nhttps://xively.com\n\nGet the IOIO-Droid source code on GitHub:\n\nhttps://github.com/kaolick/IOIO-Droid\n\n</string>
    <string name="version">v1.0.3</string>
    <string name="activity_edit_ioio_sensor_label">Config Sensor</string>
    <string name="section_name">Sensor name &amp; pin number</string>
    <string name="sensor_name">Sensor name</string>
    <string name="sensor_pin">Pin number</string>
    <string name="section_freq">Measurement frequency</string>
    <string name="sensor_freq">Frequency</string>
    <string name="section_input">Input type &amp; measurement type</string>
    <string name="section_threshold">Threshold value &amp; type</string>
    <string name="sensor_threshold">Threshold</string>
    <string name="section_xively">Use Xively &amp; Datastream</string>
    <string name="sensor_xively">Xively</string>
    <string name="sensor_datastream">Datastream</string>
    <string name="activity_measurements_label">Measurements</string>
    <string name="share_file">Share file</string>
    <string name="textview_measurement_id">#:</string>
    <string name="textview_timestamp">Timestamp:</string>
    <string name="textview_uploaded">Uploaded:</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="textview_pin_number">Pin #:</string>
    <string name="textview_sensor_id">Sensor ID:</string>
    <string name="textview_frequency">Frequency:</string>
    <string name="imageview_state_content_description">State button</string>
    <string name="imageview_measurements_content_description">Measurements button</string>
    <string name="imageview_remove_sensor_content_description">Remove sensor button</string>
    <string name="pref_cat_database_title">Database</string>
    <string name="pref_cat_general_title">General</string>
    <string name="pref_cat_location_title">Location</string>
    <string name="pref_cat_xively_title">Xively</string>
    <string name="pref_database_delete_key">pref_db_delete</string>
    <string name="pref_database_delete_summ">Delete all database tables including added sensors.</string>
    <string name="pref_database_delete_title">Delete Database</string>
    <string name="pref_database_export_key">pref_db_export</string>
    <string name="pref_database_export_summ">Export all database tables to the external storage.</string>
    <string name="pref_database_export_title">Export Database</string>
    <string name="pref_general_about_key">pref_general_about_key</string>
    <string name="pref_general_about_summ">Get more information about IOIO-Droid.</string>
    <string name="pref_general_about_title">About</string>
    <string name="pref_general_decimals_key">pref_decimals</string>
    <string name="pref_general_decimals_summ">Set the number of decimals for measured values.</string>
    <string name="pref_general_decimals_title">Decimals</string>
    <string name="pref_general_ioio_version_key">pref_ioio_version</string>
    <string name="pref_general_ioio_version_summ">Select the IOIO board version (V1 or OTG) connected to the device.</string>
    <string name="pref_general_ioio_version_title">IOIO Board Version</string>
    <string name="pref_general_simulation_mode_key">pref_general_simulation_mode</string>
    <string name="pref_general_simulation_mode_summ_off">Turn ON to simulate the connection with a IOIO board.</string>
    <string name="pref_general_simulation_mode_summ_on">Turn OFF to use a real connection with a IOIO board.</string>
    <string name="pref_general_simulation_mode_title">Simulation Mode</string>
    <string name="pref_general_wakelock_key">pref_wakelock</string>
    <string name="pref_general_wakelock_summ_off">Turn ON to keep the CPU awake during measuring processes. CAUTION: Can drain the battery!!!</string>
    <string name="pref_general_wakelock_summ_on">Turn OFF to let the CPU go to sleep during measuring processes.</string>
    <string name="pref_general_wakelock_title">Keep CPU Awake</string>
    <string name="pref_location_delete_key">pref_location_delete</string>
    <string name="pref_location_delete_summ">Delete all collected location data from the database.</string>
    <string name="pref_location_delete_title">Delete Location Data</string>
    <string name="pref_location_export_key">pref_location_export</string>
    <string name="pref_location_export_summ">Export all collected location data to the external storage.</string>
    <string name="pref_location_export_title">Export Location Data</string>
    <string name="pref_location_location_service_key">pref_location_location_service</string>
    <string name="pref_location_location_service_summ_off">Turn ON to enable automatic location updates during the measuring process.</string>
    <string name="pref_location_location_service_summ_on">Turn OFF to disable automatic location updates during the measuring process.</string>
    <string name="pref_location_location_service_title">Location Service</string>
    <string name="pref_location_show_last_location_key">pref_location_show_last_location</string>
    <string name="pref_location_show_last_location_summ">Show the device\'s last known location (f.e. in Google Maps).</string>
    <string name="pref_location_show_last_location_title">Show Last Known Location</string>
    <string name="pref_location_updates_frequency_dialog_message">Please enter a frequency for location updates:</string>
    <string name="pref_location_updates_frequency_key">pref_location_frequency</string>
    <string name="pref_location_updates_frequency_summ">Enter a frequency for location updates.</string>
    <string name="pref_location_updates_frequency_title">Location Updates Frequency</string>
    <string name="pref_location_updates_period_key">pref_location_period</string>
    <string name="pref_location_updates_period_summ">Set the period for automatic location updates (default 1h).</string>
    <string name="pref_location_updates_period_title">Location Updates Period</string>
    <string name="pref_location_updates_time_unit_key">pref_location_time_unit</string>
    <string name="pref_location_updates_time_unit_summ">Select a time unit for location updates.</string>
    <string name="pref_location_updates_time_unit_title">Location Updates Time Unit</string>
    <string name="pref_xively_api_key_dialog_message">Please enter your Xively API key:</string>
    <string name="pref_xively_api_key_key">pref_xively_api_key</string>
    <string name="pref_xively_api_key_summ">Enter your Xively API key.</string>
    <string name="pref_xively_api_key_title">API key</string>
    <string name="pref_xively_feed_id_dialog_message">Please enter your Feed ID:</string>
    <string name="pref_xively_feed_id_key">pref_xively_feed_id</string>
    <string name="pref_xively_feed_id_summ">Enter your Feed ID.</string>
    <string name="pref_xively_feed_id_title">Feed ID</string>
    <string name="pref_xively_upload_automatic_key">pref_upload_automatic</string>
    <string name="pref_xively_upload_automatic_summ_off">Turn ON to enable automatic uploads for measurements and location data.</string>
    <string name="pref_xively_upload_automatic_summ_on">Turn OFF to disable automatic uploads for measurements and location data.</string>
    <string name="pref_xively_upload_automatic_title">Automatic Uploads</string>
    <string name="pref_xively_upload_frequency_dialog_message">Please enter a frequency for automatic uploads:</string>
    <string name="pref_xively_upload_frequency_key">pref_xively_upload_frequency</string>
    <string name="pref_xively_upload_frequency_summ">Enter a frequency for automatic uploads.</string>
    <string name="pref_xively_upload_frequency_title">Automatic Upload Frequency</string>
    <string name="pref_xively_upload_period_key">pref_xively_upload_period</string>
    <string name="pref_xively_upload_period_summ">Set the period for automatic uploads (default 1h).</string>
    <string name="pref_xively_upload_period_title">Automatic Upload Period</string>
    <string name="pref_xively_upload_location_key">pref_xively_upload_location</string>
    <string name="pref_xively_upload_location_summ">Upload last known location.</string>
    <string name="pref_xively_upload_location_title">Upload Location Data</string>
    <string name="pref_xively_upload_measurements_key">pref_xively_upload_measurements</string>
    <string name="pref_xively_upload_measurements_summ">Upload all measurements of all sensors that use Xively.</string>
    <string name="pref_xively_upload_measurements_title">Upload Measurements</string>
    <string name="pref_xively_upload_time_unit_key">pref_xively_upload_time_unit</string>
    <string name="pref_xively_upload_time_unit_summ">Select a time unit for automatic uploads.</string>
    <string name="pref_xively_upload_time_unit_title">Automatic Uploads Time Unit</string>
    <string name="help_delete_measurements_content">Press EDIT to activate ActionMode. To delete a specific value, click on the value\'s REMOVE-icon. To delete all values, press DELETE ALL.</string>
    <string name="help_delete_measurements_title">Delete Measured Values</string>
    <string name="help_export_measurements_content">Press EXPORT to export the measured values table as a .csv-file to the external storage.</string>
    <string name="help_export_measurements_title">Export Measured Values</string>
    <string name="help_refresh_measurements_content">Press REFRESH to refresh the measured values list. Can be used during measurement processes.</string>
    <string name="help_refresh_measurements_title">Refresh List</string>
    <string name="help_upload_measurements_content">Press UPLOAD to upload measured values to Xively. To use this feature you must enter your API-key and Feed ID in the settings, enable the sensor to use Xively and enter the according datastream.</string>
    <string name="help_upload_measurements_title">Upload Measured Values</string>
</resources>